fix images rendering on about

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
     <p class="m-bottom">Your ticket to hassle-free transportation</p>
     <div class="about container">
         <div class="about-transport">
-            <img src="/resources/images/convenience-booking.jpeg" alt="" class="img">
+            <img src="./resources/images/convenience-booking.jpeg" alt="" class="img">
             <h3>Convenient Booking</h3>
             <p>EasyGo-Eticket allows users to book their public transport tickets online, saving time and eliminating the need to wait
             in long lines at the station.</p>
@@ -40,7 +40,7 @@
         </div>
 
         <div class="about-transport">
-            <img src="/resources/images/payment_option.avif" alt="" class="img">
+            <img src="./resources/images/payment_option.avif" alt="" class="img">
             <h3>Wide Range of Options</h3>
             <p>From buses to trains, EasyGo-Eticket offers a variety of public transport options for travelers to choose from, making
             their journey more flexible and convenient.</p>
@@ -48,7 +48,7 @@
         </div>
 
         <div class="about-transport">
-            <img src="/resources/images/secure_reliable.jpeg" alt="" class="img">
+            <img src="./resources/images/secure_reliable.jpeg" alt="" class="img">
             <h3>Secure and Reliable</h3>
             <p>With a secure online payment system and reliable ticketing service, EasyGo-Eticket ensures that customers can travel
             with peace of mind, knowing their bookings are in safe hands.</p>
@@ -65,7 +65,7 @@
     <div class="about-team-container">
         <div class="about-team">
             <div>
-                <img src="/resources/images/specialist.jpeg" alt="" class="img">
+                <img src="./resources/images/specialist.jpeg" alt="" class="img">
             </div>
             <div class="about-team-text">
                 <h3>Customer Support Specialists</h3>
@@ -81,13 +81,13 @@
                 efficient booking process for all users.</p>
             </div>
             <div>
-                <img src="/resources/images/techical-expert.jpg" alt="" class="img">
+                <img src="./resources/images/techical-expert.jpg" alt="" class="img">
             </div>
         </div>
 
         <div class="about-team">
             <div>
-                <img src="/resources/images/inn_thinkers.jpeg" alt="" class="img">
+                <img src="./resources/images/inn_thinkers.jpeg" alt="" class="img">
             </div>
             <div class="about-team-text">
                 <h3>Innovative Thinkers</h3>
@@ -104,7 +104,7 @@
     <div id="about-transport-containter container m-l-top">
         <div class="about-transport-box m-bottom">
             <div>
-                <img src="/resources/images/digital_ticket.jpeg" alt="" class="img">
+                <img src="./resources/images/digital_ticket.jpeg" alt="" class="img">
             </div>
             <div class="about-transport-text">
                 <h3>Digital Ticketing System</h3>
@@ -119,13 +119,13 @@
                     transport.</p>
             </div>
             <div>
-                <img src="/resources/images/realtime-track.png" alt="" class="img">
+                <img src="./resources/images/realtime-track.png" alt="" class="img">
             </div>
         </div>
 
         <div class="about-transport-box m-bottom">
             <div>
-                <img src="/resources/images/integration.jpeg" alt="" class="img">
+                <img src="./resources/images/integration.jpeg" alt="" class="img">
             </div>
             <div class="about-transport-text">
                 <h3>Seamless Integration</h3>
@@ -188,7 +188,7 @@
         </div>
         <p class="m-top">Copyright &copy;2024 -EasyGo - Eticket. All Rights Reserved.</p>
     </footer>
-    <script src="resources/js/script.js"></script>
+    <script src="./resources/js/script.js"></script>
 </body>
 
 </html>
