--- a/service.html
+++ b/service.html
@@ -61,7 +61,7 @@
         <p class="m-bottom m-top">Book your preferred public transport services with ease using our user-friendly platform.</p>
         <div class="booking-content">
             <div class="m-top">
-                <img src="/resources/images/book_now.jpg" alt="" class="l-img">
+                <img src="resources/images/book_now.jpg" alt="" class="l-img">
             </div>
             <div class="booking-form m-top">
                 <h3>Personalized Scheduling</h3>
@@ -99,7 +99,7 @@
         <p class="m-bottom">Discover what our customers have to say about their experiences with EasyGo-Eticket.</p>
         <div class="customer-service-content container m-l-top">
             <div class="customer-service">
-                <img src="/resources/images/passengers.webp" alt="" class="img">
+                <img src="resources/images/passengers.webp" alt="" class="img">
                 <h3>Convenient and Reliable</h3>
                 <p>EasyGo-Eticket made my daily commute so convenient and reliable. I no longer have to worry about missing my bus or
                 train.</p>
@@ -107,7 +107,7 @@
             </div>
 
             <div class="customer-service">
-                <img src="/resources/images/passensers_2.jpg" alt="" class="img">
+                <img src="resources/images/passensers_2.jpg" alt="" class="img">
                 <h3>Efficient Service</h3>
                 <p>I was impressed by the efficient service provided by EasyGo-Eticket. The booking process was seamless, and the travel
                 updates were very helpful.</p>
@@ -115,7 +115,7 @@
             </div>
 
             <div class="customer-service">
-                <img src="/resources/images/Buses.jpg" alt="" class="img">
+                <img src="resources/images/Buses.jpg" alt="" class="img">
                 <h3>Excellent Support</h3>
                 <p>The customer support team at EasyGo-Eticket was extremely helpful and responsive when I needed assistance with my
                 booking. I highly recommend their services to everyone.</p>
