--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
         <div class="location-content container">
           <div class="location">
             <img
-              src="resources/images/effortless.jpeg"
+              src="./resources/images/effortless.jpeg"
               alt=""
               class="img"
             />
@@ -53,7 +53,7 @@
           </div>
           <div class="location">
             <img
-              src="resources/images/support.jpeg"
+              src="./resources/images/support.jpeg"
               alt=""
               class="img"
             />
@@ -68,7 +68,7 @@
           </div>
           <div class="location">
             <img
-              src="resources/images/channels.png"
+              src="./resources/images/channels.png"
               alt=""
               class="img"
             />
@@ -204,7 +204,7 @@
         Copyright &copy;2024 -EasyGo - Eticket. All Rights Reserved.
       </p>
     </footer>
-    <script src="resources/js/script.js"></script>
-    <script src="resources/js/contact.js"></script>
+    <script src="./resources/js/script.js"></script>
+    <script src="./resources/js/contact.js"></script>
   </body>
 </html>
