--- a/product.html
+++ b/product.html
@@ -41,7 +41,7 @@
         <p class="m-bottom">Explore our range of bus tickets for different routes and schedules</p>
         <div class="product-service">
             <div>
-                <img src="resources/images/ticket_print.webp" alt="" class="l-img">
+                <img src="./resources/images/ticket_print.webp" alt="" class="l-img">
             </div>
             <div class="product-text">
                 <h3>Secure Payment</h3>
@@ -51,7 +51,7 @@
 
         <div class="product-service">
             <div>
-                <img src="resources/images/Buses-2.jpg" alt="" class="l-img">
+                <img src="./resources/images/Buses-2.jpg" alt="" class="l-img">
             </div>
             <div class="product-text">
                 <h3>Real-time Availability</h3>
@@ -61,7 +61,7 @@
 
         <div class="product-service">
             <div>
-                <img src="resources/images/passengers.webp" alt="" class="l-img">
+                <img src="./resources/images/passengers.webp" alt="" class="l-img">
             </div>
             <div class="product-text">
                 <h3>Flexible Booking</h3>
@@ -81,7 +81,7 @@
         </div>
         <p class="m-top">Copyright &copy;2024 -EasyGo - Eticket. All Rights Reserved.</p>
     </footer>
-    <script src="resources/js/script.js"></script>
+    <script src="./resources/js/script.js"></script>
 </body>
 
 </html>
