--- a/service.html
+++ b/service.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="resources/css/styles.css" />
-    <link rel="stylesheet" href="resources/css/service.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
+    <link rel="stylesheet" href="./resources/css/styles.css" />
+    <link rel="stylesheet" href="./resources/css/service.css">
+    <link rel="stylesheet" href="./https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="./https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
 
 
     <title>EasyGo - Eticket</title>
@@ -18,11 +18,11 @@
         <h2>Easy Go Eticket</h2>
         <nav id="nav-menu">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="service.html">Services</a></li>
-                <li><a href="product.html">Products</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About Us</a></li>
+                <li><a href="./service.html">Services</a></li>
+                <li><a href="./product.html">Products</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -61,7 +61,7 @@
         <p class="m-bottom m-top">Book your preferred public transport services with ease using our user-friendly platform.</p>
         <div class="booking-content">
             <div class="m-top">
-                <img src="resources/images/book_now.jpg" alt="" class="l-img">
+                <img src="./resources/images/book_now.jpg" alt="" class="l-img">
             </div>
             <div class="booking-form m-top">
                 <h3>Personalized Scheduling</h3>
@@ -99,7 +99,7 @@
         <p class="m-bottom">Discover what our customers have to say about their experiences with EasyGo-Eticket.</p>
         <div class="customer-service-content container m-l-top">
             <div class="customer-service">
-                <img src="resources/images/passengers.webp" alt="" class="img">
+                <img src="./resources/images/passengers.webp" alt="" class="img">
                 <h3>Convenient and Reliable</h3>
                 <p>EasyGo-Eticket made my daily commute so convenient and reliable. I no longer have to worry about missing my bus or
                 train.</p>
@@ -107,7 +107,7 @@
             </div>
 
             <div class="customer-service">
-                <img src="resources/images/passensers_2.jpg" alt="" class="img">
+                <img src="./resources/images/passensers_2.jpg" alt="" class="img">
                 <h3>Efficient Service</h3>
                 <p>I was impressed by the efficient service provided by EasyGo-Eticket. The booking process was seamless, and the travel
                 updates were very helpful.</p>
@@ -115,7 +115,7 @@
             </div>
 
             <div class="customer-service">
-                <img src="resources/images/Buses.jpg" alt="" class="img">
+                <img src="./resources/images/Buses.jpg" alt="" class="img">
                 <h3>Excellent Support</h3>
                 <p>The customer support team at EasyGo-Eticket was extremely helpful and responsive when I needed assistance with my
                 booking. I highly recommend their services to everyone.</p>
@@ -135,7 +135,7 @@
         </div>
         <p class="m-top">Copyright &copy;2024 -EasyGo - Eticket. All Rights Reserved.</p>
     </footer>
-    <script src="resources/js/script.js"></script>
+    <script src="./resources/js/script.js"></script>
 </body>
 
 </html>
